Fix "Sort by" not aligning to the right on Safari

--- a/src/styles/pages/product-listing.scss
+++ b/src/styles/pages/product-listing.scss
@@ -65,7 +65,7 @@
 
   @include media(">=notebook") {
     grid-column: 6 / span 7;
-    justify-content: right;
+    justify-content: flex-end;
     order: unset;
     min-height: initial;
     padding: 0;
